init commit cambios maggie
cambios de maggie

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<p>home works!</p>
+<!-- <p>home works!</p> -->
 <!-- <p>{{fecha | demoDate }}</p>
 <div *ngIf="true">Prueba</div>
 
@@ -46,7 +46,10 @@
     <p>No entro al IF</p>
 </ng-template> -->
 
-<h1 demoColors>HOLA MUNDO :)</h1>
+<!-- <h1 demoColors>HOLA MUNDO :)</h1>
 <img src="https://xestaticos.elcolombiano.com/binrepository/842x1080/-179c0/1200d627/none/11101/NQXP/homero-simpson_42360908_20230512163831.jpg" 
 width="300" height="300"  demoDemoimage 
-imgDefault="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS291kLsoy1WRHLjgBo7QpwFL9sNtEu9Ua-og&usqp=CAU">
+imgDefault="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS291kLsoy1WRHLjgBo7QpwFL9sNtEu9Ua-og&usqp=CAU"> -->
+
+<!-- <demo-contador></demo-contador> -->
+<demo-tabla-periodica></demo-tabla-periodica>
