cambios de lazy loading tailwind
se agregaron ejemplos de lazy loading y tailwind

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,4 +52,6 @@ width="300" height="300"  demoDemoimage
 imgDefault="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS291kLsoy1WRHLjgBo7QpwFL9sNtEu9Ua-og&usqp=CAU"> -->
 
 <!-- <demo-contador></demo-contador> -->
-<demo-tabla-periodica></demo-tabla-periodica>
+<!-- <demo-tabla-periodica></demo-tabla-periodica> -->
+
+<h1>HOME</h1>
