--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,34 @@
-<router-outlet></router-outlet>
 <!-- <p>{{fecha | demo }}</p> -->
 <!-- <div  [ngClass]="bandera ? 'bg': ''">
   hola mundo
 </div>
 <div *ngFor="let item of items"><li>item {{item}}</li></div> -->
+<div class="absolute left-0 top-0 bottom-0 right-0 flex flex-col">
+  
+  <div class="h-full">
+    <div class="flex flex-col h-full">
+      
+      <div class="flex-grow-0">
+        <div class="grid justify-items-center grid-cols-1 md:grid-cols-4 sm:grid-cols-2 gap-4 w-full">
+          <div class="p-2">
+            <a routerLink="/">Home</a>
+          </div>
+          <div class="p-2">
+            <a routerLink="/contador">Contador</a>
+          </div>
+          <div class="p-2">
+            <a routerLink="/tabla-periodica">Tabla Periodica</a>
+          </div>
+          <!-- <div class="p-2">
+            <a routerLink="/nuevo-elemento">Nuevo Elemento</a>
+          </div> -->
+        </div>
+      </div>
+
+      <div class="relative w-full flex-auto p-2">
+        <router-outlet></router-outlet>
+      </div>
+
+    </div>
+  </div>
+</div>
