--- a/src/app/tabla-periodica/tabla-periodica.component.html
+++ b/src/app/tabla-periodica/tabla-periodica.component.html
@@ -22,6 +22,10 @@
                 <mat-icon color="primary">more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
+                <button mat-menu-item [routerLink]="['/editar-elemento', row.position]">
+                    <mat-icon color="primary">edit</mat-icon>
+                    <span>Modificar</span>
+                </button>
                 <button mat-menu-item (click)="onDelete(row)">
                     <mat-icon color="warn">delete</mat-icon>
                     <span>Eliminar</span>
