--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
   hola mundo
 </div>
 <div *ngFor="let item of items"><li>item {{item}}</li></div> -->
-<div class="absolute left-0 top-0 bottom-0 right-0 flex flex-col">
+<!-- <div class="absolute left-0 top-0 bottom-0 right-0 flex flex-col"> -->
   
-  <div class="h-full">
+  <div class="relative h-full overflow-hidden">
     <div class="flex flex-col h-full">
       
       <div class="flex-grow-0">
@@ -19,16 +19,16 @@
           <div class="p-2">
             <a routerLink="/tabla-periodica">Tabla Periodica</a>
           </div>
-          <!-- <div class="p-2">
+          <div class="p-2">
             <a routerLink="/nuevo-elemento">Nuevo Elemento</a>
-          </div> -->
+          </div>
         </div>
       </div>
 
-      <div class="relative w-full flex-auto p-2">
+      <div class="w-full flex-auto overflow-auto p-2">
         <router-outlet></router-outlet>
       </div>
 
     </div>
   </div>
-</div>
+<!-- </div> -->
